trimmed all the validations